--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.nuxeo.ecm.platform</groupId>
-    <artifactId>nuxeo-features-parent</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <groupId>org.nuxeo.ecm.distribution</groupId>
+    <artifactId>nuxeo-distribution</artifactId>
+    <version>5.5-SNAPSHOT</version>
   </parent>
 
   <groupId>org.nuxeo.dam</groupId>
   <artifactId>nuxeo-dam-parent</artifactId>
-  <version>5.4.3-SNAPSHOT</version>
+  <version>5.5-SNAPSHOT</version>
   <name>Nuxeo DAM Parent</name>
   <packaging>pom</packaging>
   <description>Nuxeo DAM Parent</description>
@@ -26,7 +25,7 @@
   </modules>
 
   <properties>
-    <nuxeo.dam.version>5.4.3-SNAPSHOT</nuxeo.dam.version>
+    <nuxeo.dam.version>5.5-SNAPSHOT</nuxeo.dam.version>
   </properties>
 
   <dependencyManagement>
@@ -61,239 +60,8 @@
         <artifactId>nuxeo-dam-importer-jaxrs</artifactId>
         <version>${nuxeo.dam.version}</version>
       </dependency>
-
-      <dependency>
-        <groupId>org.nuxeo.runtime</groupId>
-        <artifactId>nuxeo-runtime-deploy</artifactId>
-        <version>${nuxeo.runtime.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.runtime</groupId>
-        <artifactId>nuxeo-runtime-jetty-adapter</artifactId>
-        <version>${nuxeo.runtime.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform</artifactId>
-        <type>ejb</type>
-        <version>${nuxeo.services.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-damDocumentActions-core</artifactId>
-        <type>ejb</type>
-        <version>${nuxeo.services.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-ear</artifactId>
-        <version>${nuxeo.features.version}</version>
-        <type>pom</type>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-annotations-core-contrib</artifactId>
-        <version>${nuxeo.features.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-video-core</artifactId>
-        <version>${nuxeo.features.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-video-convert</artifactId>
-        <version>${nuxeo.features.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-video-jsf</artifactId>
-        <version>${nuxeo.features.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-audio-core</artifactId>
-        <version>${nuxeo.features.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-audio-jsf</artifactId>
-        <version>${nuxeo.features.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-categorization-service</artifactId>
-        <version>${nuxeo.features.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-categorization-language</artifactId>
-        <version>${nuxeo.features.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-categorization-coverage</artifactId>
-        <version>${nuxeo.features.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-categorization-subjects</artifactId>
-        <version>${nuxeo.features.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-importer-core</artifactId>
-        <version>${nuxeo.features.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-importer-jaxrs</artifactId>
-        <version>${nuxeo.features.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-jbossws-wrapper</artifactId>
-        <version>4.0.5.GA</version>
-      </dependency>
-
-      <!-- Dependencies on our custom branch in Nuxeo -->
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-webapp-base</artifactId>
-        <version>${nuxeo.jsf.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.nuxeo.ecm.platform</groupId>
-        <artifactId>nuxeo-platform-ui-web</artifactId>
-        <version>${nuxeo.jsf.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>de.schlichtherle.io</groupId>
-        <artifactId>truezip</artifactId>
-        <version>6.6</version>
-      </dependency>
-
-      <!-- CMIS dependencies -->
-      <dependency>
-        <groupId>org.nuxeo.ecm.core</groupId>
-        <artifactId>nuxeo-chemistry-impl</artifactId>
-        <version>${nuxeo.chemistry.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.core</groupId>
-        <artifactId>nuxeo-chemistry-jaxrs</artifactId>
-        <version>${nuxeo.chemistry.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.nuxeo.ecm.core</groupId>
-        <artifactId>nuxeo-chemistry-ws</artifactId>
-        <version>${nuxeo.chemistry.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.chemistry</groupId>
-        <artifactId>chemistry-api</artifactId>
-        <version>${apache.chemistry.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.chemistry</groupId>
-        <artifactId>chemistry-atompub</artifactId>
-        <version>${apache.chemistry.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.chemistry</groupId>
-        <artifactId>chemistry-atompub-server</artifactId>
-        <version>${apache.chemistry.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.chemistry</groupId>
-        <artifactId>chemistry-commons</artifactId>
-        <version>${apache.chemistry.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.chemistry</groupId>
-        <artifactId>chemistry-ws</artifactId>
-        <version>${apache.chemistry.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.abdera</groupId>
-        <artifactId>abdera-core</artifactId>
-        <version>0.4.0-incubating</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.abdera</groupId>
-        <artifactId>abdera-i18n</artifactId>
-        <version>0.4.0-incubating</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.abdera</groupId>
-        <artifactId>abdera-parser</artifactId>
-        <version>0.4.0-incubating</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.abdera</groupId>
-        <artifactId>abdera-server</artifactId>
-        <version>0.4.0-incubating</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.ws.commons.axiom</groupId>
-        <artifactId>axiom-api</artifactId>
-        <version>1.2.5</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.ws.commons.axiom</groupId>
-        <artifactId>axiom-impl</artifactId>
-        <version>1.2.5</version>
-      </dependency>
-      <dependency>
-        <groupId>org.antlr</groupId>
-        <artifactId>antlr-runtime</artifactId>
-        <version>3.1.3</version>
-      </dependency>
-      <dependency>
-        <groupId>jaxen</groupId>
-        <artifactId>jaxen</artifactId>
-        <version>1.1-beta-6</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.nuxeo.ecm.core</groupId>
-        <artifactId>nuxeo-core-storage-sql-test</artifactId>
-        <version>${nuxeo.core.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.7</version>
-        <scope>test</scope>
-      </dependency>
     </dependencies>
   </dependencyManagement>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.4.2</version>
-        <configuration>
-          <systemProperties>
-            <property>
-              <name>net.sourceforge.cobertura.datafile</name>
-              <value>${project.build.directory}/cobertura/cobertura.ser</value>
-            </property>
-          </systemProperties>
-          <includes>
-            <include>**/*Test*.java</include>
-          </includes>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
 
   <repositories>
     <repository>
@@ -313,7 +81,6 @@
         <enabled>false</enabled>
       </releases>
       <snapshots>
-        <updatePolicy>always</updatePolicy>
         <enabled>true</enabled>
       </snapshots>
     </repository>
@@ -339,9 +106,14 @@
         <enabled>false</enabled>
       </releases>
       <snapshots>
-        <updatePolicy>always</updatePolicy>
         <enabled>true</enabled>
       </snapshots>
     </pluginRepository>
   </pluginRepositories>
+
+  <scm>
+    <connection>scm:hg:http://hg.nuxeo.org/nuxeo-dam</connection>
+    <developerConnection>scm:hg:https://hg.nuxeo.org/nuxeo-dam</developerConnection>
+    <url>http://hg.nuxeo.org/nuxeo-dam</url>
+  </scm>
 </project>
