--- a/nuxeo-webengine-jaxrs/pom.xml
+++ b/nuxeo-webengine-jaxrs/pom.xml
@@ -43,6 +43,11 @@
     </dependency>
 
     <dependency>
+      <!-- only for buffering servlet classes -->
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-web-common</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-rendering</artifactId>
     </dependency>
